--- a/bootstrap-project/index.html
+++ b/bootstrap-project/index.html
@@ -47,7 +47,7 @@
             </div>
             <!-- Um conjunto de parágrafos que ocupa metade da tela (6-col) -->
             <div class="col-md-6">
-                <h3 id="about-title" class="mb-5 mt-5">Título</h3>
+                <h3 id="about-title">UMA AGÊNCIA QUE PENSA NO FUTURO</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <p>Voluptates quo quia minus, dolorem officia obcaecati rerum dolor aspernatur!</p>
                 <p>Atque maiores accusamus quae. Amet ipsum accusantium iusto nisi? Rem, vero maiores!</p>
