seção trabalhe conosco

--- a/bootstrap-project/index.html
+++ b/bootstrap-project/index.html
@@ -115,6 +115,74 @@
             </div>
         </div>
     </div>
+
+    <!-- Nosso Time -->
+    <div id="team-section" class="container">
+        <div class="row mb-5">
+            <div class="col-12">
+                <h3 class="main-title mb-5">Nosso Time</h3>
+            </div>
+            <div class="col-md-6 col-xl-3 mb-5">
+                <div class="card text-center">
+                    <img src="./img/profile1.jpg" class="card-img-top" alt="Foto de colaborador.">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-xl-3 mb-5">
+                <div class="card text-center">
+                    <img src="./img/profile2.jpg" class="card-img-top" alt="Foto de colaborador.">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-xl-3 mb-5">
+                <div class="card text-center">
+                    <img src="./img/profile3.jpg" class="card-img-top" alt="Foto de colaborador.">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-xl-3 mb-5">
+                <div class="card text-center">
+                    <img src="./img/profile4.jpg" class="card-img-top" alt="Foto de colaborador.">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Trabalhe Conosco -->
+    <div id="apply-section" class="container-fluid">
+        <div class="row">
+            <div id="apply-img" class="col-md-6">
+                
+            </div>
+            <div id="apply-content" class="col-md-6 text-center align-middle">
+                <h3 class="text-uppercase mb-2">Gosta de desafios?</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                <a id="apply-button" class="btn btn-primary text-uppercase" href="#" role="button">Saiba mais</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
