--- a/bootstrap-project/index.html
+++ b/bootstrap-project/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hDC Agency</title>
+    <title>MVP Studio</title>
 
     <!-- Fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,6 +17,10 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <!-- Loader - Progress Bar -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/progressbar.js/1.1.0/progressbar.min.js"></script> -->
+    <script src="./progressbar.js"></script>
+
     <!-- Scripts em JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"
@@ -27,9 +31,10 @@
     <!-- Ícones - Font Awesome -->
     <script src="https://kit.fontawesome.com/6c57f270a1.js" crossorigin="anonymous"></script>
 
-    <!-- Loader - Progress Bar -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/progressbar.js/0.6.1/progressbar.min.js"></script>
-
+    <!-- Paralax -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
+    
 </head>
 
 <body>
@@ -39,25 +44,30 @@
         <div class="row">
             <!-- O título, que ocupa toda a tela (12-col) -->
             <div class="col-12">
-                <h3 class="main-title mb-5">Sobre a hDC Agency</h3>
+                <h3 class="main-title mb-5">Sobre o MVP Studio</h3>
             </div>
             <!-- Uma imagem que ocupa metade da tela (6-col) -->
             <div class="col-md-6">
-                <img class="img-fluid" src="img/agencia.jpg" alt="">
+                <img class="img-fluid mb-3" src="img/agencia.jpg" alt="Imagem do ambiente da empresa.">
             </div>
             <!-- Um conjunto de parágrafos que ocupa metade da tela (6-col) -->
             <div class="col-md-6">
-                <h3 id="about-title">UMA AGÊNCIA QUE PENSA NO FUTURO</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p>Voluptates quo quia minus, dolorem officia obcaecati rerum dolor aspernatur!</p>
-                <p>Atque maiores accusamus quae. Amet ipsum accusantium iusto nisi? Rem, vero maiores!</p>
-                <p>Uma lista:</p>
+                <h3 id="about-title" class="mb-4">Criamos soluções inovadoras para o seu negócio</h3>
+                <p>Combinando a potência da Inteligência Artificial, a criatividade do UX/UI e a imersão da Realidade
+                    Virtual você pode
+                    oferecer experiências únicas para seus clientes e/ou colaboradores.</p>
+                <p>Que tal explorar novas fronteiras e impulsionar seu empreendimento com tecnologia de ponta? Basta
+                    entrar em contato
+                    conosco!</p>
+                <p class="p-3">Três motivos para nos escolher:</p>
                 <!-- Lista com ícones -->
                 <ul id="about-list">
-                    <li><i class="fas fa-check"></i> Item 1</li>
-                    <li><i class="fas fa-check"></i> Item 2</li>
-                    <li><i class="fas fa-check"></i> Item 3</li>
-                    <li><i class="fas fa-check"></i> Item 4</li>
+                    <li><i class="fas fa-check"></i> Inovação e Expertise: Oferecemos soluções únicas aliados a
+                        especialistas no assunto.</li>
+                    <li><i class="fas fa-check"></i> Qualidade e Excelência: Buscamos ao máximo a perfeição e satisfação
+                        do cliente.</li>
+                    <li><i class="fas fa-check"></i> Versatilidade e Abrangência: De apps à I.A, atendemos as
+                        necessdades do seu negócio.</li>
                 </ul>
             </div>
         </div>
@@ -112,6 +122,32 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse atque distinctio veritatis itaque aut
                     rerum autem
                     maxime? Ab, quidem sunt.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Dados -->
+
+    <div id="data-section" class="container-fluid">
+        <div class="row">
+            <div class="circle-box col-md-3 col-xs-6">
+                <div id="circleA"></div>
+                <p>Legenda</p>
+            </div>
+
+            <div class="circle-box col-md-3 col-xs-6">
+                <div id="circleB"></div>
+                <p>Legenda</p>
+            </div>
+
+            <div class="circle-box col-md-3 col-xs-6">
+                <div id="circleC"></div>
+                <p>Legenda</p>
+            </div>
+
+            <div class="circle-box col-md-3 col-xs-6">
+                <div id="circleD"></div>
+                <p>Legenda</p>
             </div>
         </div>
     </div>
@@ -172,14 +208,14 @@
     <div id="apply-section" class="container-fluid">
         <div class="row">
             <div id="apply-img" class="col-md-6">
-                
+
             </div>
             <div id="apply-content" class="col-md-6 text-center align-middle">
-                <h3 class="text-uppercase mb-2">Gosta de desafios?</h3>
+                <h3 class="text-uppercase mb-4">Gosta de desafios?</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
-                <a id="apply-button" class="btn btn-primary text-uppercase" href="#" role="button">Saiba mais</a>
+                <a id="apply-button" class="btn btn-primary text-uppercase mt-3" href="#" role="button">Saiba mais</a>
             </div>
         </div>
     </div>
