--- a/bootstrap-project/index.html
+++ b/bootstrap-project/index.html
@@ -36,7 +36,14 @@
                         <a href="#team-area" class="nav-item nav-link" id="team-menu">Equipe</a>
                         <a href="#portifolio-area" class="nav-item nav-link" id="portfolio-menu">Projetos</a>
                         <a href="#contact-area" class="nav-item nav-link" id="contact-menu">Contato</a>
+                        <!-- Botão de mudar tema -->
+                        <button class="nav-item nav-link" id="theme-toggle-btn" title="Mudar Tema">
+                            <i class="fas fa-moon" id="theme-icon"></i>
+                        </button>
+
+
                     </div>
+
                 </div>
             </nav>
         </div>
@@ -233,23 +240,23 @@
                         <button class="portifolio-btn">Todos</button>
                     </div>
 
-                    <figure class="col-md-4">
+                    <figure class="col-md-4 project-box">
                         <img class="img-fluid" src="./img/proj1.jpg" alt="Projeto 1">
                     </figure>
                     <figure class="col-md-4">
                         <img class="img-fluid" src="./img/proj2.jpg" alt="Projeto 1">
                     </figure>
                     <figure class="col-md-4">
-                        <img class="img-fluid" src="./img/proj1.jpg" alt="Projeto 1">
+                        <img class="img-fluid" src="./img/proj3.jpg" alt="Projeto 1">
                     </figure>
                     <figure class="col-md-4">
-                        <img class="img-fluid" src="./img/proj1.jpg" alt="Projeto 1">
+                        <img class="img-fluid" src="./img/proj4.jpg" alt="Projeto 1">
                     </figure>
                     <figure class="col-md-4">
-                        <img class="img-fluid" src="./img/proj1.jpg" alt="Projeto 1">
+                        <img class="img-fluid" src="./img/proj5.jpg" alt="Projeto 1">
                     </figure>
                     <figure class="col-md-4">
-                        <img class="img-fluid" src="./img/proj1.jpg" alt="Projeto 1">
+                        <img class="img-fluid" src="./img/proj6.jpg" alt="Projeto 1">
                     </figure>
                 </div>
             </div>
