filtro do da seção portifólio

--- a/bootstrap-project/index.html
+++ b/bootstrap-project/index.html
@@ -197,7 +197,7 @@
         </div>
     </div>
 
-    <!-- Time -->
+    <!-- Equipe -->
     <div id="team-area">
         <div class="container">
             <div class="row">
@@ -274,30 +274,32 @@
                     <h3 class="main-title">Nossos Projetos</h3>
                 </div>
                 <div id="portifolio-btn-box" class="col-md-12">
-                    <button class="portifolio-btn">Todos</button>
-                    <button class="portifolio-btn">Todos</button>
-                    <button class="portifolio-btn">Todos</button>
-                    <button class="portifolio-btn">Todos</button>
+                    <button id="all" class="portifolio-btn">Todos</button>
+                    <button id="dev" class="portifolio-btn">Desenvolvimento</button>
+                    <button id="design" class="portifolio-btn">Design</button>
+                    <button id="seo" class="portifolio-btn">SEO</button>
                 </div>
 
-                <figure class="col-md-4 project-box">
+
+                <figure id="dev" class="card col-md-4">
                     <img class="img-fluid" src="./img/proj3.jpg" alt="Projeto 1">
                 </figure>
-                <figure class="col-md-4">
+                <figure id="seo" class="card col-md-4">
                     <img class="img-fluid" src="./img/proj5.jpg" alt="Projeto 1">
                 </figure>
-                <figure class="col-md-4">
+                <figure id="design" class="card col-md-4">
                     <img class="img-fluid" src="./img/proj2.jpg" alt="Projeto 1">
                 </figure>
-                <figure class="col-md-4">
+                <figure id="dev" class="card col-md-4">
                     <img class="img-fluid" src="./img/proj4.jpg" alt="Projeto 1">
                 </figure>
-                <figure class="col-md-4">
+                <figure id="design" class="card col-md-4">
                     <img class="img-fluid" src="./img/proj6.jpg" alt="Projeto 1">
                 </figure>
-                <figure class="col-md-4">
+                <figure id="seo" class="card col-md-4">
                     <img class="img-fluid" src="./img/proj1.jpg" alt="Projeto 1">
                 </figure>
+
             </div>
         </div>
     </div>
