--- a/bootstrap-project/index.html
+++ b/bootstrap-project/index.html
@@ -59,24 +59,25 @@
                             <div class="carousel-item active">
                                 <img src="./img/banner1.png" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-md-block">
-                                    <h1>First slide label</h1>
-                                    <p>Some representative placeholder content for the first slide.</p>
+                                    <h1>Título Primeiro Slide</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, ipsa?</p>
                                     <a href="#" id="carousel-btn" class="main-btn">Saiba mais</a>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="./img/banner2.png" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-md-block">
-                                    <h1>Second slide label</h1>
-                                    <p>Some representative placeholder content for the second slide.</p>
+                                    <h1>Título Segundo Slide</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, iusto?</p>
                                     <a href="#" id="carousel-btn" class="main-btn">Saiba mais</a>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="./img/banner3.png" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-md-block">
-                                    <h1>Third slide label</h1>
-                                    <p>Some representative placeholder content for the third slide.</p>
+                                    <h1>Título Terceiro Slide</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, culpa.
+                                    </p>
                                     <a href="#" id="carousel-btn" id="carousel-btn" class="main-btn">Saiba mais</a>
                                 </div>
                             </div>
@@ -84,18 +85,19 @@
                         <button class="carousel-control-prev" type="button" data-bs-target="#carousel-area"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
+                            <span class="visually-hidden">Anterior</span>
                         </button>
                         <button class="carousel-control-next" type="button" data-bs-target="#carousel-area"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
+                            <span class="visually-hidden">Próximo</span>
                         </button>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+
     <!-- Sobre a empresa -->
     <div id="about-area">
         <div class="container">
@@ -304,18 +306,125 @@
         </div>
     </div>
 
-    <!-- Footer -->
+    <!-- Novidades -->
+    <div id="news-area">
+        <div class="container">
+            <div class="col-md-12">
+                <h3 class="main-title">Fique por dentro das novidades</h3>
+            </div>
+            <p>Assine nossa lista de e-mails, e receba nossos conteúdos sobre desenvolvimento de software</p>
+            <form action="">
+                <input type="email" name="email" id="email-input" class="form-control" placeholder="Seu melhor email">
+                <input type="submit" id="news-btn" value="Inscrever">
+            </form>
+        </div>
+    </div>
 
-    <footer>
+    <!-- Contato -->
+    <div id="call-area">
         <div class="container">
             <div class="row">
-                <div class="col-12 text-center">
-                    &copy; Desenvolvido por Gabriel Martins | WebAcademy 2023 | MVP Studio
+                <p>Deseja fazer um orçamento sem compromisso?</p>
+                <button class="main-btn" id="call-btn">Orçar</button>
+            </div>
+        </div>
+    </div>
+    </div>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <div id="contact-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="main-title">Entre em contato conosco</h3>
+                    </div>
+                    <div class="col-md-4 contact-box">
+                        <i class="fas fa-phone"></i>
+                        <p><span class="contact-title">Ligue para:</span> (44)99999-9999</p>
+                        <p><span class="contact-title">Horários:</span> 8:00 - 19:00</p>
+                    </div>
+                    <div class="col-md-4 contact-box">
+                        <i class="fas fa-envelope"></i>
+                        <p><span class="contact-title">Envie um e-mail:</span> contato@hdcagency.com.br</p>
+                    </div>
+                    <div class="col-md-4 contact-box">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p><span class="contact-title">Venha tomar um cadé:</span> Rua Lorem Ipsum - 1314</p>
+                    </div>
+                    <div class="col-md-6" id="msg-box">
+                        <p>Ou nos deixe uma mensagem:</p>
+                    </div>
+                    <div class="col-md-6" id="contact-form">
+                        <form action="">
+                            <input type="email" class="form-control" placeholder="email" name="email">
+                            <input type="text" class="form-control" placeholder="Assunto" name="subject">
+                            <textarea class="form-control" rows="3" placeholder="Sua mensagem ..."
+                                name="message"></textarea>
+                            <input type="submit" class="main-btn" value="Enviar">
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </footer>
 
+        <!-- Mapa do Site -->
+        <div id="sitemap-area" class="bg-dark py-4">
+            <div class="container-fluid">
+                <div class="row">
+                    <h4 class="text-light text-center mb-5">Explore o Site</h4>
+                    <div class="col-md-4 d-flex justify-content-center">
+                        <ul class="list-unstyled">
+                            <li><i class="fas fa-home"></i> <a href="#nav-container"
+                                    class="text-decoration-none">Home</a></li>
+                            <li><i class="fas fa-info-circle"></i> <a href="#about-area" class="text-decoration-none">O
+                                    Studio</a></li>
+                            <li><i class="fas fa-cogs"></i> <a href="#services-area"
+                                    class="text-decoration-none">Serviços</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-center">
+                        <ul class="list-unstyled">
+                            <li><i class="fas fa-users"></i> <a href="#team-area"
+                                    class="text-decoration-none">Equipe</a></li>
+                            <li><i class="fas fa-images"></i> <a href="#portifolio-area"
+                                    class="text-decoration-none">Projetos</a></li>
+                            <li><i class="fas fa-envelope"></i> <a href="#contact-area"
+                                    class="text-decoration-none">Contato</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-center">
+                        <ul class="list-unstyled">
+                            <!-- Redes Sociais -->
+                            <li><i class="fab fa-facebook-f"></i> <a href="https://www.facebook.com/your-facebook-page"
+                                    target="_blank" class="text-decoration-none">Facebook</a></li>
+                            <li><i class="fab fa-twitter"></i> <a href="https://twitter.com/your-twitter-page"
+                                    target="_blank" class="text-decoration-none">Twitter</a></li>
+                            <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/your-instagram-page"
+                                    target="_blank" class="text-decoration-none">Instagram</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Créditos -->
+        <div id="copy-area">
+            <div class="container">
+                <div class="col-md-12">
+                    <p>Desenvolvido por <a href="https://github.com/gabrieuz" target="_blank">Gabriel Martins</a> |
+                        WebAcademy &copy;
+                        2023
+                    </p>
+                </div>
+            </div>
+        </div>
+        </div>
+    </footer>
 
     <!-- Boostrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
